feat: support multi-device refresh sessions
